--- a/html/skills_box.html
+++ b/html/skills_box.html
@@ -6,9 +6,26 @@
         <img />
         <span></span>
     </div>
-    <div class="usage-container">
-        <span class="label">MP</span>
-        <span class="mp"></span>
+    <div class="stats">
+        <div class="row-mp-type">
+            <div class="half">
+                <span class="label">MP</span>
+                <span class="mp value"></span>
+            </div>
+            <div class="half">
+                <span class="type"></span>
+            </div>
+        </div>
+        <div class="row-might-range">
+            <div class="half">
+                <span class="label">MT</span>
+                <span class="might value"></span>
+            </div>
+            <div class="half">
+                <span class="label">RNG</span>
+                <span class="range value"></span>
+            </div>
+        </div>
     </div>
     <div class="desc">
     </div>
