--- a/html/template.html
+++ b/html/template.html
@@ -3,7 +3,7 @@
 <head>
     <title>Aqua Emblem</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/smoothness/jquery-ui.css">
     {css}
     {js} 
 </head>
