--- a/html/sidebar_menus.html
+++ b/html/sidebar_menus.html
@@ -6,4 +6,7 @@
 
 <div class="menu item-action-menu neutral-box"></div>
 
-<div class="menu item-action-menu-confirm neutral-box"></div>
+<div class="item-action-menu-confirm neutral-box">
+    Are you sure you want to discard this item?
+    <div class="menu"></div>
+</div>
